# mcpScanner

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: backend.yml  frontend.yml
Implementation Plan/: PHASE-1.md  PHASE-2.md  PHASE-3.md  PHASE-4.md  PHASE-5.md  README.md
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 32cc69794382_add_scan_finding_target_vulnerability_.py  b2abbaa29e12_initial_migration.py  f6ccedffc31a_add_audit_log_table.py
backend/app/: main.py
backend/app/api/routes/: __init__.py  health.py
backend/app/api/v1/: __init__.py  audit_logs.py  auth.py  monitoring.py  router.py  user_data.py  users.py
backend/app/auth/: dependencies.py  jwt.py  schemas.py
backend/app/core/: audit.py  celery_app.py  config.py  data_export.py  data_retention.py  encryption.py  log_monitoring.py  scanner_restrictions.py
backend/app/db/: __init__.py  base.py  init_db.py  session.py
backend/app/middleware/: audit_log.py  csrf.py  rate_limit.py  response_security.py  security_headers.py  validation.py
backend/app/models/: __init__.py  audit_log.py  base.py  finding.py  scan.py  secure_credential.py  target.py  user.py  vulnerability.py
backend/app/scanners/base/: cvss.py  errors.py  logger.py  processor.py  registry.py  remediation.py  scanner.py  utils.py
backend/app/scanners/passive/: __init__.py  config_scanner.py  dependency_scanner.py
backend/app/schemas/: __init__.py  audit_log.py  base.py  finding.py  scan.py  target.py  user.py  vulnerability.py
backend/app/tasks/: data_retention.py  security_monitoring.py
backend/docs/: HTTPS_CONFIGURATION.md  INCIDENT_RESPONSE_PLAN.md  SECURITY_FEATURES.md  SECURITY_POLICIES.md
backend/tests/: conftest.py  test_config.py  test_database.py  test_dependency_scanner.py  test_health.py  test_scanner_logger.py
frontend/: .env.example  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx
frontend/src/test/: setup.ts
